@@ -34,9 +34,9 @@
 <dl><dd>
 
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>
-It is compatible with OCaml versions from 1.07 to 4.06.2.</p>
+It is compatible with OCaml versions from 1.07 to 4.07.2.</p>
 
-<p>The current distributed version is <b>7.06</b> (released 2018-07-04).</p>
+<p>The current distributed version is <b>7.07</b> (released 2018-10-10).</p>
 
 <p>
 <a href="README.txt">README</a><br/>
@@ -54,7 +54,7 @@ It is compatible with OCaml versions from 1.07 to 4.06.2.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel706.tar.gz">camlp5-rel706.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel707.tar.gz">camlp5-rel707.tar.gz</a>.</p>
 
 
 <p>Browse the <a href="doc/htmlc/">documentation</a>.</p>
