@@ -1,6 +1,18 @@
+Camlp5 Version 7.07:
+--------------------
+
+* [10 Oct 18] Changed '/bin/rm' into 'rm' in Makefiles. Can be changed by
+  user by 'make RM=...'.
+* [08 Oct 18] Updated for ocaml version 4.07.2.
+* [19 Sep 18] Updated for ocaml upcomming version 4.08.0.
+* [18 Sep 18] Fixed bug: using camlp5 in ocaml toplevel, the errors locations
+  in files (with #use) where not displayed.
+* [30 Aug 18] Updated for ocaml version 4.07.1 and upcomming version 4.08.0.
+
 Camlp5 Version 7.06:
 --------------------
 
+* [17 Jul 18] Support nonrec type declaration (Kakadu).
 * [27 Jun 18] Updated for ocaml upcomming version 4.08.0.
 * [19 Jun 18] Add support for OCaml 4.07.0
 * [19 Jun 18] Fix OPAM file [in particular avoid the filesystem deletion bug]
